ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/InsuranceDetails__c.object-meta.xml
<CustomObject>
    <label>Insurance Details</label>
    <nameField>
        <label>Insurance Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>