ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Combo_LI_Premium__c.field-meta.xml
<CustomField>
    <fullName>Combo_LI_Premium__c</fullName>
    <label>Combo LI Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>