ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/EMI_Passed_in_API__c.field-meta.xml
<CustomField>
    <fullName>EMI_Passed_in_API__c</fullName>
    <label>EMI Passed in API</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>