ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Funded_Non_funded__c.field-meta.xml
<CustomField>
    <fullName>Funded_Non_funded__c</fullName>
    <label>Funded/Non funded</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Non-Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>