ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Funded_Premium__c.field-meta.xml
<CustomField>
    <fullName>Funded_Premium__c</fullName>
    <label>Funded Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>