ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan__c</fullName>
    <label>Insurance Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>