ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Insurance_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Name__c</fullName>
    <label>Insurance Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>