ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Insurance_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>