ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/LTV_with_Insurance__c.field-meta.xml
<CustomField>
    <fullName>LTV_with_Insurance__c</fullName>
    <label>LTV with Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>