ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Proposal_LTV__c.field-meta.xml
<CustomField>
    <fullName>Proposal_LTV__c</fullName>
    <label>Proposal LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>