ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/fields/Total_insurance_payable__c.field-meta.xml
<CustomField>
    <fullName>Total_insurance_payable__c</fullName>
    <label>Total insurance payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>