ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application__c</columns>
    <columns>Applicant__c</columns>
    <columns>Amount__c</columns>
    <columns>Insurance_Plan__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Funded_Premium__c</columns>
    <columns>LTV_with_Insurance__c</columns>
    <columns>LTV_without_Insurance__c</columns>
    <columns>Total_insurance_payable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application__c</field>
        <operation>equals</operation>
        <value>L06022401397</value>
    </filters>
    <label>All</label>
</ListView>